components/sections/Included/Included.module.scss
@import "styles/breakpoints.scss";

.container {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  gap: 50px;

  @include md {
    display: flex;
    flex-direction: column;
    gap: 10px;
  }
}

.list {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.listItem {
  padding: 15px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 20px;
  background-color: var(--color-secondary);
  border: 1px solid #32de84;
  border-radius: 10px;
  box-shadow: var(--shadow);
  transition: 0.4s ease;

  @include md {
    width: 100%;
    max-width: 500px;
  }

  @include sm {
    font-size: 18px;
  }

  &:hover {
    box-shadow: var(--shadow-hover);
  }
}

.image {
  width: 400px;
  height: 300px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  background-image: url("/laying.svg");

  @include sm {
    width: 280px;
    height: 200px;
  }
}

